--- a/vnCalling/app/src/main/res/layout/item_contact_list.xml
+++ b/vnCalling/app/src/main/res/layout/item_contact_list.xml
@@ -3,25 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="@dimen/_6sdp">
+    android:layout_marginVertical="@dimen/_6sdp">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/avatar"
-        android:layout_width="@dimen/_36sdp"
-        android:layout_height="@dimen/_36sdp"
+    <FrameLayout
+        android:id="@+id/flAvatar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginHorizontal="@dimen/_3sdp"
-        android:src="@mipmap/ic_launcher" />
+        android:background="@drawable/background_circle_verify_code"
+        android:padding="@dimen/_3sdp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatar"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_missed_video_call" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/userName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_6sdp"
+        android:layout_marginTop="@dimen/_2sdp"
         android:layout_toStartOf="@id/btnMessage"
-        android:layout_toEndOf="@id/avatar"
+        android:layout_toEndOf="@id/flAvatar"
+        android:textColor="@color/background"
         android:textSize="@dimen/_13ssp"
+        android:textStyle="bold"
         tools:text="William Nguyen" />
 
     <TextView
@@ -30,10 +43,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/userName"
         android:layout_marginStart="@dimen/_6sdp"
-        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginTop="@dimen/_3sdp"
         android:layout_toStartOf="@id/btnMessage"
-        android:layout_toEndOf="@id/avatar"
+        android:layout_toEndOf="@id/flAvatar"
         android:textSize="@dimen/_11ssp"
+        android:textStyle="italic"
+        android:tint="@color/background"
         tools:text="williamnb.vn@gmail.com" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -43,7 +58,8 @@
         android:layout_centerVertical="true"
         android:layout_marginHorizontal="@dimen/_3sdp"
         android:layout_toStartOf="@id/btnAudioCall"
-        android:src="@drawable/ic_message" />
+        android:src="@drawable/ic_message"
+        android:tint="@color/background" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnAudioCall"
@@ -52,7 +68,8 @@
         android:layout_centerVertical="true"
         android:layout_marginHorizontal="@dimen/_3sdp"
         android:layout_toStartOf="@id/btnVideoCall"
-        android:src="@drawable/ic_call" />
+        android:src="@drawable/ic_call"
+        android:tint="@color/background" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btnVideoCall"
@@ -61,5 +78,6 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/_8sdp"
-        android:src="@drawable/ic_video_call" />
+        android:src="@drawable/ic_video_call"
+        android:tint="@color/background" />
 </RelativeLayout>
