--- a/AndroidCommonUseCases/AndroidCommonUseCasesSourceCode/app/src/main/res/layout/fragment_first_screen.xml
+++ b/AndroidCommonUseCases/AndroidCommonUseCasesSourceCode/app/src/main/res/layout/fragment_first_screen.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
