--- a/AndroidCommonUseCases/AndroidCommonUseCasesSourceCode/app/src/main/res/layout/fragment_input_form_validation.xml
+++ b/AndroidCommonUseCases/AndroidCommonUseCasesSourceCode/app/src/main/res/layout/fragment_input_form_validation.xml
@@ -8,9 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Login Form"
+        android:text="Input form validation"
         android:textSize="32sp"
         android:textStyle="bold"
         tools:ignore="HardcodedText" />
-
 </FrameLayout>
