--- a/AndroidAppsForDevs/Calendar/app/src/main/res/values/colors.xml
+++ b/AndroidAppsForDevs/Calendar/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sample_primary">#006BBA</color>
+    <color name="sample_accent">#0093FF</color>
 </resources>
