--- a/AndroidAppsForDevs/Notes/app/src/main/res/drawable/ic_add.xml
+++ b/AndroidAppsForDevs/Notes/app/src/main/res/drawable/ic_add.xml
@@ -1,9 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="800dp"
-    android:height="800dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M12,2C6.49,2 2,6.49 2,12C2,17.51 6.49,22 12,22C17.51,22 22,17.51 22,12C22,6.49 17.51,2 12,2ZM16,12.75H12.75V16C12.75,16.41 12.41,16.75 12,16.75C11.59,16.75 11.25,16.41 11.25,16V12.75H8C7.59,12.75 7.25,12.41 7.25,12C7.25,11.59 7.59,11.25 8,11.25H11.25V8C11.25,7.59 11.59,7.25 12,7.25C12.41,7.25 12.75,7.59 12.75,8V11.25H16C16.41,11.25 16.75,11.59 16.75,12C16.75,12.41 16.41,12.75 16,12.75Z"
-      android:fillColor="#292D32"/>
+<vector android:height="24dp" android:tint="#FFFFFF"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
 </vector>
