MultiApplication: BaseFragment, BaseActivity

--- a/MultiApplicationProject/app/src/main/res/values/themes.xml
+++ b/MultiApplicationProject/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MultiApplicationProject" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MultiApplication" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,13 +13,4 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-
-    <style name="Theme.MultiApplicationProject.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="Theme.MultiApplicationProject.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="Theme.MultiApplicationProject.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
