--- a/Apps/src/main/res/layout/item_app.xml
+++ b/Apps/src/main/res/layout/item_app.xml
@@ -16,8 +16,7 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
             android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:src="@drawable/ic_calculator" />
+            android:layout_height="72dp" />
     </com.google.android.material.card.MaterialCardView>
 
     <androidx.appcompat.widget.AppCompatTextView
